<resources>
    <string name="app_name">TZMusic</string>
    <string name="bac">个性换肤</string>
    <string name="sing">听歌识曲</string>
    <string name="timing">定时停止播放</string>
    <string name="scan">扫一扫</string>
    <string name="alarm">音乐闹钟</string>
    <string name="drive">驾驶模式</string>
    <string name="netdisk">音乐网盘</string>
    <string name="coupon">优惠券</string>
    <string name="dark">夜间模式</string>
    <string name="light">日间模式</string>
    <string name="set">设置</string>
    <string name="exit">退出</string>
    <!--视频界面-->
    <string name="prefer">推荐</string>
    <string name="music">音乐</string>
    <string name="showtime">Showtime</string>
    <string name="mv">MV</string>
    <string name="element">二次元</string>
    <string name="dance">舞蹈</string>
    <string name="game">游戏</string>
    <!--发现-->
    <string name="friend">朋友</string>
    <string name="video">电台</string>













</resources>
