<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lll.lzmusic.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/main_header" />

        <android.support.v4.view.ViewPager
            android:id="@+id/vp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v4.view.ViewPager>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        android:theme="@style/MenuText"
        app:menu="@menu/drawer_view"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_gravity="bottom"
            android:background="#fff"
            android:orientation="vertical">

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:background="#ddd" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_below="@+id/line1"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/bac_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:drawablePadding="5dp"
                    android:drawableLeft="@drawable/light"
                    android:text="@string/light"
                    android:textColor="@color/text_light"/>

                <TextView
                    android:id="@+id/set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/set"
                    android:layout_centerHorizontal="true"
                    android:drawablePadding="5dp"
                    android:text="@string/set"
                    android:textColor="@color/text_light"/>

                <TextView
                    android:id="@+id/exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:drawableLeft="@drawable/exit"
                    android:drawablePadding="5dp"
                    android:text="@string/exit"
                    android:textColor="@color/text_light"/>
            </RelativeLayout>
        </RelativeLayout>

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>
